# python-backend

./: .gitignore  README.md
homework-2/: .gitignore  README.md  pyproject.toml
homework-2/app/: main.py  router.py  schemas.py  service.py  test_integration.py  test_service.py
homework-4/: DockerfileCelery  DockerfileFastapi  config.py  docker-compose.yaml  main.py  pyproject.toml  routers.py  schemas.py
homework-4/celery_app/: tasks.py
