[tool.poetry]
name = "homework-4"
version = "0.1.0"
description = ""
authors = ["Arsenii Pimenov <parseny@mail.ru>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
celery = "^5.3.4"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.2"
flake8-bugbear = "^23.9.16"
flake8-comprehensions = "^3.14.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.1.0"
pep8-naming = "^0.13.3"
flake8-string-format = "^0.3.0"
flake8-bandit = "^4.1.1"
flake8-builtins = "^2.1.0"
flake8-black = "^0.3.6"
flake8-expression-complexity = "^0.0.11"
flake8-annotations-complexity = "^0.0.8"
flake8-requirements = "^1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"